--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
       .container .content .footer .item3 {
         position: absolute;
         top: 25px;
-        right: 15px; }
+        right: 25px; }
       .container .content .footer .item2 {
         position: absolute;
         top: 25px;
@@ -78,6 +78,13 @@
         position: absolute;
         top: 25px;
         left: 30px; }
+      .container .content .footer .item4 {
+        position: absolute;
+        top: 25px;
+        left: 27%; }
+        .nav{
+          margin:25px;
+        }
     .container .content .like {
       position: absolute;
       top: 75px;
