--- a/css/style.css
+++ b/css/style.css
@@ -7,84 +7,118 @@
   src: url("../fonts/myriadpro-light.otf"); }
 
 .container {
-  min-height: 950px;
+  min-height: 71.5vw;
   background: linear-gradient(-150deg, #6049a9, #6049a9, #cc3b82, #d14681, #debd6d, #f3ae36);
-  max-width: 1500px;
-  margin: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; }
   .container .content {
-    width: 500px;
-    height: 750px;
+    width: 37.5vw;
+    height: 56.4vw;
     display: flex;
     background-color: white;
     flex-direction: column;
-    box-shadow: 8px 5px 15px #433e3f; }
+    box-shadow: 0.6vw 0.4vw 1.2vw #433e3f; }
     .container .content .header {
       width: 100%;
-      height: 70px;
+      height: 5.3vw;
       position: relative;
       display: flex; }
       .container .content .header .image-ava {
-        padding: 15px 15px 10px 15px; }
+        padding: 1.2vw 1.2vw 0.75vw 1.2vw; }
         .container .content .header .image-ava .avatar {
-          width: 45px;
-          height: 45px;
+          width: 3.4vw;
+          height: 3.4vw;
           border-radius: 50%;
           background-color: black; }
       .container .content .header .user {
-        width: 150px;
-        height: 80%;
-        padding: 20px 15px 0px 5px; }
+        width: 11.1vw;
+        height: 80%; }
+        .container .content .header .user img {
+          padding-top: 1.5vw; }
         .container .content .header .user p {
           font-family: MyriadPro-Light;
           font-weight: bold;
           color: #767676;
-          font-size: 13px; }
+          font-size: 1vw; }
+        .container .content .header .user img {
+          width: 8.2vw;
+          height: 1.5vw; }
       .container .content .header .follow {
-        padding: 20px 0px 0px 75px; }
+        padding: 1.5vw 0vw 0vw 7.5vw; }
         .container .content .header .follow #fl2 {
           position: absolute;
-          right: 90px;
-          top: 35px; }
-      .container .content .header .option {
-        padding: 25px; }
+          right: 6vw;
+          top: 2.7vw;
+          width: 3.7vw;
+          height: 0.8vw; }
+        .container .content .header .follow #fl1 {
+          width: 9.4vw;
+          height: 2.9vw;
+          position: absolute; }
+        .container .content .header .follow .option {
+          padding: 0.3vw 1.5vw 1.3vw 11vw;
+          width: 0.5vw;
+          height: 2.2vw; }
     .container .content .images {
       display: flex;
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 510px;
+      height: 38.4vw;
       background-color: #dfdede; }
+      .container .content .images img {
+        width: 17.4vw;
+        height: 13.7vw; }
     .container .content .footer {
       width: 100%;
-      height: 170px;
+      height: 12.8vw;
       display: flex;
       flex-direction: column; }
       .container .content .footer .nav {
         display: flex; }
       .container .content .footer .item2 {
-        padding: 25px 25px 0px 0px; }
+        padding: 2vw 2vw 0vw 0vw;
+        width: 2.1vw;
+        height: 2.1vw; }
       .container .content .footer .item4 {
-        padding: 25px 25px 0px 0px; }
+        padding: 2vw 2vw 0vw 0vw;
+        width: 2.8vw;
+        height: 2.2vw; }
       .container .content .footer .item3 {
-        padding: 25px 25px 0px 245px; }
+        padding: 2vw 2vw 0vw 18.5vw;
+        width: 2.4vw;
+        height: 2.5vw; }
       .container .content .footer .item1 {
-        padding: 25px 25px 0px 25px; }
+        padding: 2vw 2vw 0vw 2vw;
+        width: 2.5vw;
+        height: 2.2vw; }
     .container .content .like {
-      padding: 15px 0px 0px 30px; }
+      padding: 1.2vw 0vw 0vw 2.3vw; }
+      .container .content .like img:first-child {
+        width: 1.2vw;
+        height: 1vw; }
+      .container .content .like img:last-child {
+        width: 5.7vw;
+        height: 1.3vw; }
     .container .content .status {
       width: 100%;
-      padding: 20px 0px 25px 30px;
+      padding: 1.5vw 0vw 2vw 2.3vw;
       display: flex; }
       .container .content .status .coon {
-        padding-left: 45px; }
+        padding-left: 3.4vw;
+        font-size: 1.2vw; }
       .container .content .status span {
         font-family: MyriadPro-Light;
         font-weight: bold;
         color: #356bb4;
-        padding-bottom: 35px; }
+        padding-bottom: 2.7vw; }
+      .container .content .status img {
+        width: 8.3vw;
+        height: 1.5vw; }
   .container .design {
-    margin-top: 35px; }
+    margin-top: 2.7vw; }
+    .container .design img {
+      width: 25.1vw;
+      height: 2.5vw; }
