--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,14 +23,16 @@
     box-shadow: 0.6vw 0.4vw 1.2vw #433e3f;
     .header{
       width: 100%;
-      height: 5.3vw;
-      position: relative;
+      height: 3.7vw;
+      width: 92%;
+      //position: relative;
       display: flex;
+      padding: 1.5vw;
       .images{
 
       }
      .image-ava{
-       padding: 1.2vw 1.2vw 0.75vw 1.2vw;
+       //padding: 1.2vw 1.2vw 0.75vw 1.2vw;
        .avatar{
          width: 3.4vw;
          height: 3.4vw;
@@ -41,9 +43,9 @@
       .user{
         width: 11.1vw;
         height: 80%;
-        //padding:1vw 1.2vw 0vw 0.4vw;
+        padding: 0.5vw 0vw 0vw 1.2vw;
         img{
-          padding-top: 1.5vw;
+          //padding-top: 1.5vw;
         }
         p{
           font-family: MyriadPro-Light;
@@ -58,12 +60,19 @@
         }
       }
       .follow{
-        padding: 1.5vw 0vw 0vw 7.5vw;
+        //padding: 1.5vw 0vw 0vw 7.5vw;
+        //float: right;
+        padding-left: 8vw;
+        padding-top: 0.5vw;
+        position: relative;
+        display: flex;
         #fl2{
+
+
           position: absolute;
-          right: 6vw;
+          right: 4.5vw;
           //left: 3vw;
-          top: 2.7vw;
+          top: 1.7vw;
           width: 3.7vw;
           height: 0.8vw;
 
@@ -71,13 +80,20 @@
         #fl1{
           width: 9.4vw;
           height: 2.9vw;
-          position: absolute;
+          padding-right: 0.8vw;
+          //margin-right: 1vw;
+          //position: absolute;
           //left: 9vm;
+          //right: 2vw;
+          //padding-right: 1vw;
         }
         .option{
-          padding: 0.3vw 1.5vw 1.3vw 11vw;
+          //padding: 0.3vw 1.5vw 1.3vw 11vw;
+          padding-top: 0.3vw;
+          padding-left: 0.9vw;
           width: 0.5vw;
           height: 2.2vw;
+          float: right;
         }
       }
 
@@ -97,40 +113,50 @@
       }
     }
     .footer{
-      width: 100%;
-      height: 12.8vw;
+      width: 92%;
+      height: 11.5vw;
+      padding: 1.5vw;
       display: flex;
       flex-direction: column;
       .nav{
         display: flex;
       }
       .item2{
-        padding: 2vw 2vw 0vw 0vw;
+        //padding: 2vw 2vw 0vw 0vw;
         width: 2.1vw;
         height: 2.1vw;
+        padding: 0vw 1vw 0vw 1vw;
 
       }
       .item4{
-        padding: 2vw 2vw 0vw 0vw;
+        //padding: 2vw 2vw 0vw 0vw;
         width: 2.8vw;
         height: 2.2vw;
+        padding: 0vw 1vw 0vw 1vw;
       }
       .item3{
-        padding: 2vw 2vw 0vw 18.5vw;
+        //padding: 2vw 2vw 0vw 18.5vw;
         width: 2.4vw;
         height: 2.5vw;
+        //padding: 0vw 1vw 0vw 1vw;
+        //float: right;
+        padding-left: 19.7vw;
       }
       .item1{
-        padding: 2vw 2vw 0vw 2vw;
+        //padding: 2vw 2vw 0vw 2vw;
         width: 2.5vw;
         height: 2.2vw;
+        padding-right: 1vw;
       }
     }
     .like{
-      padding: 1.2vw 0vw 0vw 2.3vw;
+      //padding: 1.2vw 0vw 0vw 2.3vw;
+      padding: 1.2vw 0vw 0vw 0vw;
       img:first-child{
         width: 1.2vw;
         height: 1vw;
+        padding-right: 0.5vw;
+        padding-bottom: 0.1vw;
 
       }
       img:last-child{
@@ -140,7 +166,8 @@
     }
     .status{
       width: 100%;
-      padding: 1.5vw 0vw 2vw 2.3vw;
+      //padding: 1.5vw 0vw 2vw 2.3vw;
+      padding-top: 2vw;
       display: flex;
       .coon{
         padding-left: 3.4vw;
@@ -150,7 +177,7 @@
         font-family: MyriadPro-Light;
         font-weight: bold;
         color: #356bb4;
-        padding-bottom: 2.7vw;
+        //padding-bottom: 2.7vw;
 
       }
       img{
