--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,19 @@
     box-shadow: 0.6vw 0.4vw 1.2vw #433e3f; }
     .container .content .header {
       width: 100%;
-      height: 5.3vw;
-      position: relative;
-      display: flex; }
-      .container .content .header .image-ava {
-        padding: 1.2vw 1.2vw 0.75vw 1.2vw; }
-        .container .content .header .image-ava .avatar {
-          width: 3.4vw;
-          height: 3.4vw;
-          border-radius: 50%;
-          background-color: black; }
+      height: 3.7vw;
+      width: 92%;
+      display: flex;
+      padding: 1.5vw; }
+      .container .content .header .image-ava .avatar {
+        width: 3.4vw;
+        height: 3.4vw;
+        border-radius: 50%;
+        background-color: black; }
       .container .content .header .user {
         width: 11.1vw;
-        height: 80%; }
-        .container .content .header .user img {
-          padding-top: 1.5vw; }
+        height: 80%;
+        padding: 0.5vw 0vw 0vw 1.2vw; }
         .container .content .header .user p {
           font-family: MyriadPro-Light;
           font-weight: bold;
@@ -46,21 +44,26 @@
           width: 8.2vw;
           height: 1.5vw; }
       .container .content .header .follow {
-        padding: 1.5vw 0vw 0vw 7.5vw; }
+        padding-left: 8vw;
+        padding-top: 0.5vw;
+        position: relative;
+        display: flex; }
         .container .content .header .follow #fl2 {
           position: absolute;
-          right: 6vw;
-          top: 2.7vw;
+          right: 4.5vw;
+          top: 1.7vw;
           width: 3.7vw;
           height: 0.8vw; }
         .container .content .header .follow #fl1 {
           width: 9.4vw;
           height: 2.9vw;
-          position: absolute; }
+          padding-right: 0.8vw; }
         .container .content .header .follow .option {
-          padding: 0.3vw 1.5vw 1.3vw 11vw;
+          padding-top: 0.3vw;
+          padding-left: 0.9vw;
           width: 0.5vw;
-          height: 2.2vw; }
+          height: 2.2vw;
+          float: right; }
     .container .content .images {
       display: flex;
       justify-content: center;
@@ -72,39 +75,42 @@
         width: 17.4vw;
         height: 13.7vw; }
     .container .content .footer {
-      width: 100%;
-      height: 12.8vw;
+      width: 92%;
+      height: 11.5vw;
+      padding: 1.5vw;
       display: flex;
       flex-direction: column; }
       .container .content .footer .nav {
         display: flex; }
       .container .content .footer .item2 {
-        padding: 2vw 2vw 0vw 0vw;
         width: 2.1vw;
-        height: 2.1vw; }
+        height: 2.1vw;
+        padding: 0vw 1vw 0vw 1vw; }
       .container .content .footer .item4 {
-        padding: 2vw 2vw 0vw 0vw;
         width: 2.8vw;
-        height: 2.2vw; }
+        height: 2.2vw;
+        padding: 0vw 1vw 0vw 1vw; }
       .container .content .footer .item3 {
-        padding: 2vw 2vw 0vw 18.5vw;
         width: 2.4vw;
-        height: 2.5vw; }
+        height: 2.5vw;
+        padding-left: 19.7vw; }
       .container .content .footer .item1 {
-        padding: 2vw 2vw 0vw 2vw;
         width: 2.5vw;
-        height: 2.2vw; }
+        height: 2.2vw;
+        padding-right: 1vw; }
     .container .content .like {
-      padding: 1.2vw 0vw 0vw 2.3vw; }
+      padding: 1.2vw 0vw 0vw 0vw; }
       .container .content .like img:first-child {
         width: 1.2vw;
-        height: 1vw; }
+        height: 1vw;
+        padding-right: 0.5vw;
+        padding-bottom: 0.1vw; }
       .container .content .like img:last-child {
         width: 5.7vw;
         height: 1.3vw; }
     .container .content .status {
       width: 100%;
-      padding: 1.5vw 0vw 2vw 2.3vw;
+      padding-top: 2vw;
       display: flex; }
       .container .content .status .coon {
         padding-left: 3.4vw;
@@ -112,8 +118,7 @@
       .container .content .status span {
         font-family: MyriadPro-Light;
         font-weight: bold;
-        color: #356bb4;
-        padding-bottom: 2.7vw; }
+        color: #356bb4; }
       .container .content .status img {
         width: 8.3vw;
         height: 1.5vw; }
